2018-04-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): ColorDifferenceCbCr does require
	even image width. Fixes oss-fuzz 7966
	"graphicsmagick/coder_DPX_fuzzer: Unknown signal in
	TentUpsampleChroma". (Credit to OSS-Fuzz)

2018-04-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): ColorDifferenceCbCr element
	requires two samples/pixel, not one. Fixes oss-fuzz 7951
	"graphicsmagick/coder_DPX_fuzzer: Heap-buffer-overflow in
	ReadDPXImage". (Credit to OSS-Fuzz)

2018-04-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdb.c (ReadPDBImage): Assure that pixels buffer is
	initialized.  Fixes oss-fuzz 7937
	"graphicsmagick/coder_PDB_fuzzer: Use-of-uninitialized-value in
	ReadPDBImage". (Credit to OSS-Fuzz)

	* coders/mvg.c (ReadMVGImage): Assure that MVG viewbox parameters
	were supplied.  Fixes oss-fuzz 7936
	"graphicsmagick/coder_MVG_fuzzer: Use-of-uninitialized-value in
	ReadMVGImage". (Credit to OSS-Fuzz)

	* coders/dpx.c (ReadDPXImage): Element descriptors CbYCrY422 and
	CbYACrYA4224 require that the image width be evenly divisible by 2
	so enforce that.  Fixes oss-fuzz 7935
	"graphicsmagick/coder_DPX_fuzzer: Heap-buffer-overflow in
	ReadDPXImage". (Credit to OSS-Fuzz)

2018-04-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): Reject DPX files which claim to use
	signed data.  Fixes oss-fuzz 7758
	"graphicsmagick/coder_DPX_fuzzer: Use-of-uninitialized-value in
	WriteDPXImage". (Credit to OSS-Fuzz)
	(ReadDPXImage): Validate that the image elements do update all of
	the channels, including the alpha channel.  Now report an error if
	a color channel is missing.  Fixes oss-fuzz 7758
	"graphicsmagick/coder_DPX_fuzzer: Use-of-uninitialized-value in
	WriteDPXImage".

	* coders/gif.c (DecodeImage): Finally fix oss-fuzz 7732
	"graphicsmagick/coder_GIF_fuzzer: Heap-buffer-overflow in
	DecodeImage" which was not actually fixed with previous